<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sourcesansprobold"
        android:text="@string/list"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border7"
            android:drawableStart="@drawable/iconaja"
            android:drawablePadding="2dp"
            android:enabled="false"
            android:fontFamily="@font/sourcesansprosemibold"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/project_website"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/border9"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="@string/lihat" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border7"
            android:drawableStart="@drawable/iconaja"
            android:drawablePadding="2dp"
            android:enabled="false"
            android:fontFamily="@font/sourcesansprosemibold"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/project_design_nicon"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/border9"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="@string/lihat" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border7"
            android:drawableStart="@drawable/iconaja"
            android:drawablePadding="2dp"
            android:enabled="false"
            android:fontFamily="@font/sourcesansprosemibold"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/login_dan_register"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/border9"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="@string/lihat" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="380dp" />
</androidx.constraintlayout.widget.ConstraintLayout>